--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.21'
 }
 
-group 'dskst.kotlin-tdd'
+group 'dskst.tdd-kotlin'
 version '1.0-SNAPSHOT'
 
 repositories {
